# rho

./: .gitignore  AGENTS.md  Cargo.toml  README.md  flake.nix  justfile  mvp-plan.md
.github/workflows/: ci.yml  docs-book.yml
bins/rho/: Cargo.toml
bins/rho/src/: main.rs
crates/rho-agent/: Cargo.toml
crates/rho-agent/src/: lib.rs  runtime.rs  server.rs  test_helpers.rs
crates/rho-core/: Cargo.toml
crates/rho-core/src/: lib.rs  message.rs  protocol.rs  stream.rs  tool.rs
crates/rho-core/src/providers/: anthropic.rs  mod.rs  openai.rs
crates/rho-tui/: Cargo.toml
crates/rho-tui/src/: autocomplete.rs  client.rs  editor.rs  keys.rs  lib.rs  overlay.rs  select_list.rs  settings_list.rs  stdin_buffer.rs  terminal.rs  terminal_image.rs  theme.rs
crates/rho-tui/src/client/: app.rs  input.rs  mod.rs  network.rs  render.rs
crates/rho-tui/src/widgets/: box_widget.rs  loader.rs  markdown.rs  mod.rs  spacer.rs  text.rs  truncated_text.rs
docs/: book.toml
docs/src/: SUMMARY.md  index.md  quickstart.md
nix/: rho.nix
