[workspace]
members = [
    "bins/rho",
    "crates/rho-agent",
    "crates/rho-core",
    "crates/rho-tui",
]
resolver = "3"

[workspace.package]
license = "MIT OR Apache-2.0"

[workspace.dependencies]
clap = { version = "4.5.60", features = ["derive"] }
futures-core = "0.3.32"
futures-util = { version = "0.3.32", default-features = false, features = ["std"] }
rig = { package = "rig-core", version = "0.31.0" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
tracing = "0.1.41"
uuid = { version = "1.21.0", features = ["v4"] }
