[workspace]
members = [
    "bins/rho",
    "crates/rho-agent",
    "crates/rho-core",
    "crates/rho-tui",
]
resolver = "3"

[workspace.package]
license = "MIT OR Apache-2.0"

[workspace.dependencies]
clap = { version = "4.5.60", features = ["derive"] }
eventsource-stream = "0.2.3"
futures-core = "0.3.32"
futures-util = { version = "0.3.32", default-features = false, features = ["std"] }
reqwest = { version = "0.13.2", default-features = false, features = ["json", "rustls", "stream"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
tokio-util = "0.7.18"
uuid = { version = "1.21.0", features = ["v4"] }
