[package]
name = "rho"
version = "0.1.0"
edition = "2024"
license.workspace = true

[dependencies]
clap.workspace = true
rho-agent = { path = "../../crates/rho-agent" }
rho-core = { path = "../../crates/rho-core" }
rho-tui = { path = "../../crates/rho-tui" }
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
