[package]
name = "rho"
version = "0.1.0"
edition = "2024"
license.workspace = true

[dependencies]
clap.workspace = true
rho-agent = { path = "../../crates/rho-agent" }
rho-core = { path = "../../crates/rho-core" }
rho-tui = { path = "../../crates/rho-tui" }
tokio = { version = "1.49.0", features = ["macros", "net", "rt-multi-thread"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt"] }
