[package]
name = "rho-agent"
version = "0.1.0"
edition = "2024"
license.workspace = true

[dependencies]
rho-core = { path = "../rho-core" }
axum = { version = "0.8.6", features = ["ws"] }
futures-util.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio = { version = "1.48.0", features = ["macros", "net", "rt-multi-thread", "sync", "time"] }

[dev-dependencies]
futures = "0.3.31"
