[package]
name = "rho-agent"
version = "0.1.0"
edition = "2024"
license.workspace = true

[dependencies]
rho-core = { path = "../rho-core" }
axum = { version = "0.8.8", features = ["ws"] }
futures-util.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio = { version = "1.49.0", features = ["macros", "net", "rt-multi-thread", "sync", "time"] }
tracing.workspace = true
uuid.workspace = true

[dev-dependencies]
futures = "0.3.32"
