[package]
name = "rho-core"
version = "0.1.0"
edition = "2024"
license.workspace = true

[dependencies]
eventsource-stream.workspace = true
futures-core.workspace = true
futures-util.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio = { version = "1.49.0", features = ["macros"] }
tokio-util.workspace = true
async-stream = "0.3.6"
