[package]
name = "rho-tui"
version = "0.1.0"
edition = "2024"
license.workspace = true

[dependencies]
base64 = "0.22.1"
crossterm = { version = "0.29.0", features = ["event-stream"] }
futures-util.workspace = true
ratatui = "0.30.0"
rho-core = { path = "../rho-core" }
serde_json.workspace = true
thiserror.workspace = true
tokio = { version = "1.49.0", features = ["io-std", "io-util", "macros", "rt-multi-thread", "sync", "time"] }
tokio-tungstenite = { version = "0.28.0", default-features = false, features = ["connect", "rustls-tls-webpki-roots"] }
tracing.workspace = true
